--- a/css/style.css
+++ b/css/style.css
@@ -6,12 +6,18 @@ body {
   border: 1px solid black;
   box-sizing: border-box;
 }
+
+#gridContainer {
+  flex-wrap: wrap;
+}
+
 .card {
   border: 2px solid rgb(0, 0, 0);
-  border-radius: 25px;
+  border-radius: 10px;
   background-color: aliceblue;
-  height: 25px;
+  height: 50px;
   margin: 3px;
+  width: 10%;
 }
 .card--active {
   background-color: blue;
