--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,9 @@ body {
   height: 50px;
   margin: 3px;
   width: 10%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .card--active {
   background-color: blue;
