--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@ body {
 }
 
 * {
-  border: 1px solid black;
+  /* border: 1px solid black; */
   box-sizing: border-box;
 }
 
@@ -12,15 +12,17 @@ body {
 }
 
 .card {
-  border: 2px solid rgb(0, 0, 0);
-  border-radius: 10px;
+  border: 1px solid rgb(0, 0, 0);
   background-color: aliceblue;
-  height: 50px;
-  margin: 3px;
-  width: 10%;
+  height: 20px;
+  width: calc(100% / 10);
   display: flex;
+  padding: 1em;
   align-items: center;
   justify-content: center;
+}
+.btn {
+  border-radius: 0;
 }
 .card--active {
   color: white;
