--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,13 @@ body {
   height: calc(100vh - 4em);
 }
 
+.hide {
+  display: none;
+}
+
+.block {
+  display: block;
+}
 .card {
   border: 1px solid (0, 0, 0);
   background-color: aliceblue;
